# PFS.WireGuard.Generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
PFS.WireGuard.Generator.Core/: CMakeLists.txt
PFS.WireGuard.Generator.Core/includes/ApiCommands/: BashCommand.hpp  CmdCommand.hpp  Command.hpp
PFS.WireGuard.Generator.Core/includes/CommandAdapter/: AdapterAPI.hpp  BashCommand.hpp  CmdCommand.hpp  Command.hpp
PFS.WireGuard.Generator.Core/includes/Common/: StringExtentions.hpp
PFS.WireGuard.Generator.Core/includes/Configurator/: Block.hpp  Configurator.hpp  FileIO.hpp  Parser.hpp
PFS.WireGuard.Generator.Core/includes/ExportLibrary/: PFSWGGeneratorCoreExport.hpp  PFSWireGuardGeneratorCoreAPI.hpp
PFS.WireGuard.Generator.Core/includes/Models/: Client.hpp  Server.hpp
PFS.WireGuard.Generator.Core/src/ApiCommands/: BashCommand.cpp
PFS.WireGuard.Generator.Core/src/CommandAdapter/: AdapterAPI.cpp  BashCommand.cpp  CmdCommand.cpp
PFS.WireGuard.Generator.Core/src/Common/: StringExtentions.cpp
PFS.WireGuard.Generator.Core/src/Configurator/: Block.cpp  Configurator.cpp  FileIO.cpp  Parser.cpp
PFS.WireGuard.Generator.Core/src/ExportLibrary/: PFSWireGuardGeneratorCoreAPI.cpp  dllmain.cpp
PFS.WireGuard.Generator.Core/src/Models/: Client.cpp  Server.cpp
PFS.WireGuard.Generator.UI/: CMakeLists.txt
PFS.WireGuard.Generator.UI/src/: main.cpp
